[package]
name = "watklok-native"
version = "0.1.0"
edition = "2024"

[lib]
# Это критически важно: сообщаем Rust, что собираем динамическую библиотеку C-типа
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "2.16.13"
once_cell = "1.21.4"
rand = "0.10.0"
dashmap = "7.0.0-rc2"
aes-gcm = "0.11.0-rc.3"
memchr = "2.8.0"
arc-swap = "1.9.0"
tokio = { version = "1.50.0", features = ["time"] }
davey = "0.1.3"

[profile.release]
# Оптимизации для максимальной точности таймера
lto = true
opt-level = 3
strip = "symbols"